--- a/podman-compose.yaml
+++ b/podman-compose.yaml
@@ -11,7 +11,7 @@ services:
       - $XDG_RUNTIME_DIR/podman/podman.sock:/var/run/podman.sock
       - ${HOME}/.config/containers:/root/.config/containers:ro
     environment:
-      - OLLAMA_HOST=https://ollama.sme-it.dk
+      - OLLAMA_HOST=https://ollama.example.com # Change this to your hostname or IP
       - STORAGE_DRIVER=overlay
       - STORAGE_OPTS=overlay.mount_program=/usr/bin/fuse-overlayfs
     security_opt:
